--- a/Draw/Controller/Feed/FeedDetail/ReplayContestDrawController.xib
+++ b/Draw/Controller/Feed/FeedDetail/ReplayContestDrawController.xib
@@ -37,7 +37,7 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIImageView" id="206785665">
+					<object class="IBUIImageView" id="760261532">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 460}</string>
@@ -71,13 +71,13 @@
 						<string key="NSFrame">{{50, -1}, {220, 50}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="377277807"/>
+						<reference key="NSNextKeyView" ref="223202339"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<string key="IBUIText">kReplay</string>
+						<string key="IBUIText">kReplayTitle</string>
 						<object class="NSColor" key="IBUITextColor" id="434528647">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
@@ -110,7 +110,7 @@
 						<string key="NSFrame">{{5, 5}, {37, 35}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="643794129"/>
+						<reference key="NSNextKeyView" ref="386633723"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -139,7 +139,7 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUIView" id="643794129">
+					<object class="IBUIView" id="386633723">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{0, 48}, {320, 304}}</string>
@@ -154,24 +154,24 @@
 						</object>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUIButton" id="377277807">
+					<object class="IBUIButton" id="223202339">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{17, 395}, {50, 50}}</string>
+						<string key="NSFrame">{{17, 389}, {50, 50}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="457950810"/>
+						<reference key="NSNextKeyView" ref="739837070"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<string key="IBUINormalTitle">送鲜花</string>
 						<reference key="IBUIHighlightedTitleColor" ref="434528647"/>
-						<object class="NSColor" key="IBUINormalTitleColor" id="630706070">
+						<object class="NSColor" key="IBUINormalTitleColor" id="27729650">
 							<int key="NSColorSpace">2</int>
 							<bytes key="NSRGB">MC40MjM1Mjk0MTE4IDAuMTkyMTU2ODYyNyAwLjAzMTM3MjU0OTAyAA</bytes>
 						</object>
-						<object class="NSColor" key="IBUINormalTitleShadowColor" id="238538199">
+						<object class="NSColor" key="IBUINormalTitleShadowColor" id="765905710">
 							<int key="NSColorSpace">2</int>
 							<bytes key="NSRGB">MC45MDk4MDM5ODY1IDAuNjUwOTgwNDEzIDAAA</bytes>
 						</object>
@@ -179,20 +179,20 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">flower_result.png</string>
 						</object>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="670869374">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="1022522436">
 							<int key="type">1</int>
 							<double key="pointSize">12</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="56811849">
+						<object class="NSFont" key="IBUIFont" id="6331207">
 							<string key="NSName">Helvetica</string>
 							<double key="NSSize">12</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUIButton" id="270215276">
+					<object class="IBUIButton" id="289574494">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{253, 395}, {50, 50}}</string>
+						<string key="NSFrame">{{253, 389}, {50, 50}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -201,22 +201,22 @@
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<string key="IBUINormalTitle">丢鸡蛋</string>
 						<reference key="IBUIHighlightedTitleColor" ref="434528647"/>
-						<reference key="IBUINormalTitleColor" ref="630706070"/>
-						<reference key="IBUINormalTitleShadowColor" ref="238538199"/>
+						<reference key="IBUINormalTitleColor" ref="27729650"/>
+						<reference key="IBUINormalTitleShadowColor" ref="765905710"/>
 						<object class="NSCustomResource" key="IBUINormalImage">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">tomato_result.png</string>
 						</object>
-						<reference key="IBUIFontDescription" ref="670869374"/>
-						<reference key="IBUIFont" ref="56811849"/>
+						<reference key="IBUIFontDescription" ref="1022522436"/>
+						<reference key="IBUIFont" ref="6331207"/>
 					</object>
-					<object class="IBUIButton" id="457950810">
+					<object class="IBUIButton" id="739837070">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{135, 388}, {50, 66}}</string>
+						<string key="NSFrame">{{135, 381}, {50, 66}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="270215276"/>
+						<reference key="NSNextKeyView" ref="289574494"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -235,14 +235,14 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">draw_share.png</string>
 						</object>
-						<reference key="IBUIFontDescription" ref="670869374"/>
-						<reference key="IBUIFont" ref="56811849"/>
+						<reference key="IBUIFontDescription" ref="1022522436"/>
+						<reference key="IBUIFont" ref="6331207"/>
 					</object>
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="206785665"/>
+				<reference key="NSNextKeyView" ref="760261532"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -266,9 +266,33 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">holderView</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="643794129"/>
+						<reference key="destination" ref="386633723"/>
 					</object>
 					<int key="connectionID">15</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">UpButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="223202339"/>
+					</object>
+					<int key="connectionID">20</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">downButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="289574494"/>
+					</object>
+					<int key="connectionID">21</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">titleLabel</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="18597553"/>
+					</object>
+					<int key="connectionID">23</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -281,30 +305,12 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">clickUpButton:</string>
-						<reference key="source" ref="377277807"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">17</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">clickDownButton:</string>
-						<reference key="source" ref="270215276"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">19</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">clickShareButton:</string>
-						<reference key="source" ref="457950810"/>
+						<reference key="source" ref="739837070"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
-					<int key="connectionID">18</int>
+					<int key="connectionID">22</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -322,11 +328,11 @@
 							<reference ref="502701312"/>
 							<reference ref="18597553"/>
 							<reference ref="867325737"/>
-							<reference ref="643794129"/>
-							<reference ref="457950810"/>
-							<reference ref="270215276"/>
-							<reference ref="377277807"/>
-							<reference ref="206785665"/>
+							<reference ref="386633723"/>
+							<reference ref="739837070"/>
+							<reference ref="289574494"/>
+							<reference ref="223202339"/>
+							<reference ref="760261532"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -358,27 +364,27 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">8</int>
-						<reference key="object" ref="643794129"/>
+						<reference key="object" ref="386633723"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">12</int>
-						<reference key="object" ref="377277807"/>
+						<reference key="object" ref="223202339"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">13</int>
-						<reference key="object" ref="270215276"/>
+						<reference key="object" ref="289574494"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">14</int>
-						<reference key="object" ref="457950810"/>
+						<reference key="object" ref="739837070"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">16</int>
-						<reference key="object" ref="206785665"/>
+						<reference key="object" ref="760261532"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
@@ -403,7 +409,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">19</int>
+			<int key="maxID">23</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -418,17 +424,30 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">ReplayContestDrawController</string>
 					<string key="superclassName">PPViewController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">holderView</string>
-						<string key="NS.object.0">UIView</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">holderView</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="downButton">UIButton</string>
+						<string key="holderView">UIView</string>
+						<string key="titleLabel">UILabel</string>
+						<string key="upButton">UIButton</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="downButton">
+							<string key="name">downButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="holderView">
 							<string key="name">holderView</string>
 							<string key="candidateClassName">UIView</string>
 						</object>
-					</object>
+						<object class="IBToOneOutletInfo" key="titleLabel">
+							<string key="name">titleLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="upButton">
+							<string key="name">upButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/ReplayContestDrawController.h</string>
