--- a/Draw/Controller/Feed/FeedDetail/ReplayContestDrawController.xib
+++ b/Draw/Controller/Feed/FeedDetail/ReplayContestDrawController.xib
@@ -37,7 +37,7 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIImageView" id="760261532">
+					<object class="IBUIImageView" id="66094289">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 460}</string>
@@ -49,6 +49,33 @@
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">light_yellow_bg@2x.png</string>
+						</object>
+					</object>
+					<object class="IBUIImageView" id="432397388">
+						<reference key="NSNextResponder" ref="191373211"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{0, 430}, {320, 30}}</string>
+						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<object class="NSCustomResource" key="IBUIImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">tools_wood.png</string>
+						</object>
+					</object>
+					<object class="IBUIImageView" id="907147987">
+						<reference key="NSNextResponder" ref="191373211"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{0, 39}, {320, 356}}</string>
+						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="IBUIContentStretch">{{0.5, 0.5}, {0, 0}}</string>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<object class="NSCustomResource" key="IBUIImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">contest_rule_bg@2x.png</string>
 						</object>
 					</object>
 					<object class="IBUIImageView" id="502701312">
@@ -71,7 +98,7 @@
 						<string key="NSFrame">{{50, -1}, {220, 50}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="223202339"/>
+						<reference key="NSNextKeyView" ref="79418163"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -110,7 +137,7 @@
 						<string key="NSFrame">{{5, 5}, {37, 35}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="386633723"/>
+						<reference key="NSNextKeyView" ref="860392459"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -139,10 +166,10 @@
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUIView" id="386633723">
+					<object class="IBUIView" id="860392459">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, 48}, {320, 304}}</string>
+						<string key="NSFrame">{{8, 63}, {304, 320}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="18597553"/>
@@ -154,24 +181,24 @@
 						</object>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUIButton" id="223202339">
+					<object class="IBUIButton" id="79418163">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{17, 389}, {50, 50}}</string>
+						<string key="NSFrame">{{17, 392}, {48, 48}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="739837070"/>
+						<reference key="NSNextKeyView" ref="974025237"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<string key="IBUINormalTitle">送鲜花</string>
 						<reference key="IBUIHighlightedTitleColor" ref="434528647"/>
-						<object class="NSColor" key="IBUINormalTitleColor" id="27729650">
+						<object class="NSColor" key="IBUINormalTitleColor" id="564215507">
 							<int key="NSColorSpace">2</int>
 							<bytes key="NSRGB">MC40MjM1Mjk0MTE4IDAuMTkyMTU2ODYyNyAwLjAzMTM3MjU0OTAyAA</bytes>
 						</object>
-						<object class="NSColor" key="IBUINormalTitleShadowColor" id="765905710">
+						<object class="NSColor" key="IBUINormalTitleShadowColor" id="1060958084">
 							<int key="NSColorSpace">2</int>
 							<bytes key="NSRGB">MC45MDk4MDM5ODY1IDAuNjUwOTgwNDEzIDAAA</bytes>
 						</object>
@@ -179,20 +206,20 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">flower_result.png</string>
 						</object>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="1022522436">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="413062286">
 							<int key="type">1</int>
 							<double key="pointSize">12</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="6331207">
+						<object class="NSFont" key="IBUIFont" id="437001207">
 							<string key="NSName">Helvetica</string>
 							<double key="NSSize">12</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUIButton" id="289574494">
+					<object class="IBUIButton" id="477285902">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{253, 389}, {50, 50}}</string>
+						<string key="NSFrame">{{253, 392}, {48, 48}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<bool key="IBUIOpaque">NO</bool>
@@ -201,22 +228,22 @@
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<string key="IBUINormalTitle">丢鸡蛋</string>
 						<reference key="IBUIHighlightedTitleColor" ref="434528647"/>
-						<reference key="IBUINormalTitleColor" ref="27729650"/>
-						<reference key="IBUINormalTitleShadowColor" ref="765905710"/>
+						<reference key="IBUINormalTitleColor" ref="564215507"/>
+						<reference key="IBUINormalTitleShadowColor" ref="1060958084"/>
 						<object class="NSCustomResource" key="IBUINormalImage">
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">tomato_result.png</string>
 						</object>
-						<reference key="IBUIFontDescription" ref="1022522436"/>
-						<reference key="IBUIFont" ref="6331207"/>
+						<reference key="IBUIFontDescription" ref="413062286"/>
+						<reference key="IBUIFont" ref="437001207"/>
 					</object>
-					<object class="IBUIButton" id="739837070">
+					<object class="IBUIButton" id="974025237">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{135, 381}, {50, 66}}</string>
+						<string key="NSFrame">{{135, 384}, {48, 64}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="289574494"/>
+						<reference key="NSNextKeyView" ref="477285902"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -235,14 +262,14 @@
 							<string key="NSClassName">NSImage</string>
 							<string key="NSResourceName">draw_share.png</string>
 						</object>
-						<reference key="IBUIFontDescription" ref="1022522436"/>
-						<reference key="IBUIFont" ref="6331207"/>
+						<reference key="IBUIFontDescription" ref="413062286"/>
+						<reference key="IBUIFont" ref="437001207"/>
 					</object>
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="760261532"/>
+				<reference key="NSNextKeyView" ref="66094289"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -266,7 +293,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">holderView</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="386633723"/>
+						<reference key="destination" ref="860392459"/>
 					</object>
 					<int key="connectionID">15</int>
 				</object>
@@ -274,7 +301,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">UpButton</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="223202339"/>
+						<reference key="destination" ref="79418163"/>
 					</object>
 					<int key="connectionID">20</int>
 				</object>
@@ -282,7 +309,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">downButton</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="289574494"/>
+						<reference key="destination" ref="477285902"/>
 					</object>
 					<int key="connectionID">21</int>
 				</object>
@@ -293,6 +320,14 @@
 						<reference key="destination" ref="18597553"/>
 					</object>
 					<int key="connectionID">23</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">saveButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="974025237"/>
+					</object>
+					<int key="connectionID">26</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -306,7 +341,7 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">clickShareButton:</string>
-						<reference key="source" ref="739837070"/>
+						<reference key="source" ref="974025237"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -325,14 +360,16 @@
 						<int key="objectID">1</int>
 						<reference key="object" ref="191373211"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="502701312"/>
 							<reference ref="18597553"/>
 							<reference ref="867325737"/>
-							<reference ref="386633723"/>
-							<reference ref="739837070"/>
-							<reference ref="289574494"/>
-							<reference ref="223202339"/>
-							<reference ref="760261532"/>
+							<reference ref="860392459"/>
+							<reference ref="974025237"/>
+							<reference ref="477285902"/>
+							<reference ref="79418163"/>
+							<reference ref="66094289"/>
+							<reference ref="432397388"/>
+							<reference ref="502701312"/>
+							<reference ref="907147987"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -364,27 +401,37 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">8</int>
-						<reference key="object" ref="386633723"/>
+						<reference key="object" ref="860392459"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">12</int>
-						<reference key="object" ref="223202339"/>
+						<reference key="object" ref="79418163"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">13</int>
-						<reference key="object" ref="289574494"/>
+						<reference key="object" ref="477285902"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">14</int>
-						<reference key="object" ref="739837070"/>
+						<reference key="object" ref="974025237"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">16</int>
-						<reference key="object" ref="760261532"/>
+						<reference key="object" ref="66094289"/>
+						<reference key="parent" ref="191373211"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">24</int>
+						<reference key="object" ref="432397388"/>
+						<reference key="parent" ref="191373211"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">25</int>
+						<reference key="object" ref="907147987"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
@@ -400,6 +447,8 @@
 				<string key="14.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<real value="2" key="14.IBUIButtonInspectorSelectedEdgeInsetMetadataKey"/>
 				<string key="16.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="24.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="25.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -409,7 +458,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">23</int>
+			<int key="maxID">26</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -465,10 +514,12 @@
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="back@2x.png">{74, 74}</string>
+			<string key="contest_rule_bg@2x.png">{137, 83}</string>
 			<string key="draw_share.png">{16, 16}</string>
 			<string key="flower_result.png">{16, 16}</string>
 			<string key="light_yellow_bg@2x.png">{640, 960}</string>
 			<string key="tomato_result.png">{16, 16}</string>
+			<string key="tools_wood.png">{640, 59}</string>
 			<string key="topwood@2x.png">{640, 99}</string>
 		</dictionary>
 		<string key="IBCocoaTouchPluginVersion">1181</string>
