--- a/Draw/Controller/Contest/Opus/ContestOpusController.xib
+++ b/Draw/Controller/Contest/Opus/ContestOpusController.xib
@@ -138,7 +138,7 @@
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<string key="IBUITitleShadowOffset">{0, 1}</string>
-						<string key="IBUINormalTitle">达人</string>
+						<string key="IBUINormalTitle">我的</string>
 						<reference key="IBUIHighlightedTitleColor" ref="75250085"/>
 						<reference key="IBUINormalTitleColor" ref="75250085"/>
 						<object class="NSColor" key="IBUINormalTitleShadowColor" id="857487715">
@@ -188,7 +188,7 @@
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<string key="IBUITitleShadowOffset">{0, 1}</string>
-						<string key="IBUINormalTitle">热榜</string>
+						<string key="IBUINormalTitle">排行榜</string>
 						<reference key="IBUIHighlightedTitleColor" ref="75250085"/>
 						<reference key="IBUINormalTitleColor" ref="75250085"/>
 						<reference key="IBUINormalTitleShadowColor" ref="857487715"/>
